eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: "a2f2ef61ce3294a85a5dd49cac5ba635-1030229050.eu-west-1.elb.amazonaws.com" #"api.simple-bank.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - a2f2ef61ce3294a85a5dd49cac5ba635-1030229050.eu-west-1.elb.amazonaws.com #"api.simple-bank.org"
    secretName: simple-bank-api-cert
